--- a/document/book.bib
+++ b/document/book.bib
@@ -106,7 +106,7 @@ In experiment had musical background as a predictor, but they elimnated people w
   author = {Taylor, Jack A. and Pembrook, Randall G.},
   year = {1983},
   pages = {16-35},
-  file = {/Users/davidjohnbaker/Zotero/storage/K2YYI4M3/Taylor and Pembrook - 1983 - Strategies in memory for short melodies An extens.pdf},
+  file = {/Users/davidjohnbaker/Zotero/storage/B9PJX7PL/BuonviriPaney2015.pdf;/Users/davidjohnbaker/Zotero/storage/K2YYI4M3/Taylor and Pembrook - 1983 - Strategies in memory for short melodies An extens.pdf},
   annote = {Notes on Taylor and Pembrook 1983
 
 Musical characteristics and features predict melodic memory scores.
@@ -173,6 +173,354 @@ Small study with no statisical analysis
 Interesting methdology, but they bascially say that the retention model is better with very shady analysis~
 
 [ ] Incorporated}
+}
+
+@article{ockelfordMusicModuleWorking2007,
+  title = {A {{Music Module}} in {{Working Memory}}? {{Evidence}} from the {{Performance}} of a {{Prodigious Musical Savant}}},
+  volume = {11},
+  issn = {1029-8649, 2045-4147},
+  shorttitle = {A {{Music Module}} in {{Working Memory}}?},
+  doi = {10.1177/10298649070110S202},
+  language = {en},
+  number = {2\_suppl},
+  journal = {Musicae Scientiae},
+  author = {Ockelford, Adam},
+  month = jul,
+  year = {2007},
+  pages = {5-36},
+  file = {/Users/davidjohnbaker/Zotero/storage/AJJW5HGV/Ockelford - 2007 - A Music Module in Working Memory Evidence from th.pdf}
+}
+
+@article{paneyEffectDirectingAttention2016,
+  title = {The Effect of Directing Attention on Melodic Dictation Testing},
+  volume = {44},
+  issn = {0305-7356, 1741-3087},
+  doi = {10.1177/0305735614547409},
+  abstract = {The purpose of this study was to investigate the effect of guiding students through remembering and understanding a melody on their melodic dictation scores. Two matched groups of university music students (N = 64) took a dictation, but those in the treatment group received instructions directing their attention for the purpose of aiding their memory and understanding.},
+  language = {en},
+  number = {1},
+  journal = {Psychology of Music},
+  author = {Paney, Andrew S},
+  month = jan,
+  year = {2016},
+  pages = {15-24},
+  file = {/Users/davidjohnbaker/Zotero/storage/QWC278IW/Paney - 2016 - The effect of directing attention on melodic dicta.pdf}
+}
+
+@article{fournierCognitiveStrategiesSightsinging2017,
+  title = {Cognitive Strategies in Sight-Singing: {{The}} Development of an Inventory for Aural Skills Pedagogy},
+  issn = {0305-7356, 1741-3087},
+  shorttitle = {Cognitive Strategies in Sight-Singing},
+  doi = {10.1177/0305735617745149},
+  abstract = {This research aimed to identify, describe and categorize cognitive strategies related to sight-singing within aural skills education. Using a constant comparative method, we carried out a thematic content analysis using NVivo to categorize strategies in a broad range of sources, including six interviews, five scientific publications, two professional books, and two ear-training manuals. Findings revealed 72 cognitive strategies grouped into four main categories and 14 subcategories: reading mechanisms (pitch decoding, pattern building, validation), sight-singing (preparation, performance), reading skills acquisition (musical vocabulary enrichment, symbolic associations, internalization, rehearsal techniques) and learning support (self-regulation, attention, time management, motivation, stress). Our cognitive strategy inventory provides a new framework for the study of cognitive strategies in aural skills research, and offers new insights for teachers who implement explicit cognitive strategies within their sight-singing pedagogy.},
+  language = {en},
+  journal = {Psychology of Music},
+  author = {Fournier, Guillaume and Moreno Sala, Maria Teresa and Dub\'e, Francis and O'Neill, Susan},
+  month = dec,
+  year = {2017},
+  pages = {030573561774514},
+  file = {/Users/davidjohnbaker/Zotero/storage/REXAF7XV/Fournier et al. - 2017 - Cognitive strategies in sight-singing The develop.pdf}
+}
+
+@article{buonviriMelodicDictationInstruction2015,
+  title = {Melodic {{Dictation Instruction}}},
+  volume = {62},
+  abstract = {Based on relevant literature and recent qualitative findings, the purpose of this survey research was to identify pedagogical approaches to melodic dictation employed by Advanced Placement (AP) Music Theory teachers across the United States. The researcher-designed survey questions focused on pitch and rhythm skills, instructional resources, dictation strategies, test-taking skills, and characteristics of successful dictation students. The survey was distributed online to a stratified random sample of 875 AP Music Theory teachers across the United States. Of these recipients, 398 participants from 49 states and the District of Columbia completed the survey, yielding a 45.5\% return rate. Results indicated that teachers preferred pitch systems that emphasized scale degree function and rhythm systems that emphasized the meter. Participants also reported the influence of the AP exam on their dictation teaching and described their need for additional instructional time and better preparation for teaching aural skills. Suggestions for further research include similar studies of other populations, including high school teachers of other theory courses and college theory instructors.},
+  language = {en},
+  number = {2},
+  journal = {Journal of Research in Music Education},
+  author = {Buonviri, Nathan O and Paney, Andrew S},
+  year = {2015},
+  pages = {224-237},
+  file = {/Users/davidjohnbaker/Zotero/storage/EI7SBLPS/Buonviri and Paney - Melodic Dictation Instruction.pdf},
+  annote = {Research on dictation strategies also has been minimal and seems\\
+to lack even the tradition of informed historical debate that sight-singing pedagogy has\\
+enjoyed (Paney \& Buonviri, 2014; Pembrook \& Riggins, 1990).
+
+~
+
+Melodic dictation instruction seems to\\
+lack a consistent pedagogical tradition overall (Paney \& Buonviri, 2014; Pembrook \& Riggins, 1990).
+
+Also interesting statistics about what people use what systems.}
+}
+
+@article{paneyTeachingMelodicDictation2014,
+  title = {Teaching {{Melodic Dictation}} in {{Advanced Placement Music Theory}}},
+  volume = {61},
+  issn = {0022-4294, 1945-0095},
+  doi = {10.1177/0022429413508411},
+  abstract = {This study approaches to teaching melodic dictation skills of Advanced Placement (AP) Music Theory were examined. Twelve high school teachers from four states were interviewed. Four themes emerged from the interview transcripts: cognitive frameworks, processing strategies, rhythm, and course design. Participants generally confirmed established understandings of aural skills pedagogy, particularly in areas of pattern instruction, connecting aural and written theory, connecting sight-singing and dictation, incorporating scale degree function, targeting melodic ``bookends,'' focusing on the big picture, sequencing curricula, and incorporating familiar melodies. Unique to the findings of this study were participants' positive attitudes toward a standardized test and their concern for the students' psychological barriers inherent in learning aural skills. A general indifference to rhythm counting systems and a common acknowledgment of students' difficulties with rhythmic notation also was found. Recommendations for further research include a largescale survey of melodic dictation strategies taught by AP Music Theory teachers, empirical investigation of the efficacy of specific counting systems, comparison of students' reported dictation strategies and their success with dictation on the AP exam, and exploration of the influence of psychological fortitude on the dictation process.},
+  language = {en},
+  number = {4},
+  journal = {Journal of Research in Music Education},
+  author = {Paney, Andrew S. and Buonviri, Nathan O.},
+  month = jan,
+  year = {2014},
+  pages = {396-414},
+  file = {/Users/davidjohnbaker/Zotero/storage/HB8PVA5N/Paney and Buonviri - 2014 - Teaching Melodic Dictation in Advanced Placement M.pdf}
+}
+
+@article{buonviriEffectsPreparatorySinging2015,
+  title = {Effects of a {{Preparatory Singing Pattern}} on {{Melodic Dictation Success}}},
+  volume = {63},
+  issn = {0022-4294, 1945-0095},
+  doi = {10.1177/0022429415570754},
+  abstract = {The purpose of this study was to investigate effects of a preparatory contextual singing pattern on melodic dictation test scores. Forty-nine undergraduate music education majors took melodic dictations under three conditions. After hearing an orienting chord sequence, they (1) sang a preparatory solf\'ege pattern in the key, meter, and tempo of the target dictations in the first condition; (2) prepared themselves silently during an equivalent time interval in the second condition; and (3) took the dictations immediately in the third condition. A repeated measures ANOVA and post hoc analysis revealed that participants scored significantly higher when they heard the dictation immediately following the chord sequence than when they sang the preparatory pattern first. Participants may have been distracted by the additional task of singing, interfering with their focus on the ensuing dictation. They reported a variety of preparatory strategies during the silent interval condition, suggesting that dictation students may benefit from learning multiple strategies and choosing what works best for them. Future research might investigate the relationship between strategies used during dictation and strategies used just prior to dictation. Implications for music educators include the need for careful decisions regarding when and how to combine musical tasks for student learning.},
+  language = {en},
+  number = {1},
+  journal = {Journal of Research in Music Education},
+  author = {Buonviri, Nathan O.},
+  month = apr,
+  year = {2015},
+  pages = {102-113},
+  file = {/Users/davidjohnbaker/Zotero/storage/RI3XTCKF/Buonviri - 2015 - Effects of a Preparatory Singing Pattern on Melodi.pdf},
+  annote = {If you have people sing right afterwards, they forget materials
+
+=== Strategies people use
+
+Students may employ any of a broad range of strategies when taking dictation\\
+(Karpinski, 2000), including ``chunking'' of information for efficient memory storage\\
+and retrieval (Madsen \& Staum, 1983; Oura, 1991; Potter, 1990; Rogers, 2004), applying\\
+contextual solf\'ege syllables or numbers to percepts for identification (McClung,\\
+2001), engaging kinesthetic or visual imagery to decode pitch information (Mikumo,\\
+1994; Thompson, 2004), attending to broad melodic characteristics to reinforce context\\
+for the target melody (Buonviri, 2014), and employing flexible working memory\\
+to analyze the melody both forward and backward in chronological sequence (Berz,\\
+1995; Margulis, 2005). Some instructors teach these strategies to boost students' learning\\
+and to assist them in dictation tests (Karpinski, 2000; Paney \& Buonviri, 2013).
+
+~
+
+Demorest and Clements (2007), for example, found that\\
+providing a tonal context may improve performance on pitch-matching tasks.
+
+~
+
+VERY LOW ETA SQUARED AND NOT PAIR WISE SCORING
+
+Pembrook (1987) found that attempting to sing an entire dictation melody from\\
+memory before notating it was generally counterproductive for students because they\\
+couldn't sing the melody correctly.
+
+~
+
+EM: Research has shown that dictation students employ a number of different strategies\\
+to decode pitch and rhythm efficiently and accurately (Mikumo, 1994; Thompson,\\
+2004).
+
+~
+
+Preparedness of undergrads -- (Livingston \&Ackman, 2003)}
+}
+
+@article{buonviriEffectsMusicNotation2015,
+  title = {Effects of Music Notation Reinforcement on Aural Memory for Melodies},
+  volume = {33},
+  issn = {0255-7614, 1744-795X},
+  doi = {10.1177/0255761415582345},
+  abstract = {The purpose of this study was to investigate effects of music notation reinforcement on aural memory for melodies. Participants were 41 undergraduate and graduate music majors in a within-subjects design. Experimental trials tested melodic memory through a sequence of target melodies, distraction melodies, and matched and unmatched answer choices. Target melodies were presented either aurally only, or aurally with matching notation. Results of a paired samples t-test revealed no significant difference in experimental test scores based on presentation format, suggesting that music notation reinforcement of melodies does not affect aural memory for those melodies. Recommendations for further research include an aural-visual melodic memory test paired with a survey of participant learning modalities; a survey of successful melodic memory strategies employed by aural skills students; and longitudinal studies of visual imagery applied to aural skills tasks. Implications for music education at all levels center on the need to cultivate strong cognitive relationships between visual and aural aspects of music.},
+  language = {en},
+  number = {4},
+  journal = {International Journal of Music Education},
+  author = {Buonviri, Nathan},
+  month = nov,
+  year = {2015},
+  pages = {442-450},
+  file = {/Users/davidjohnbaker/Zotero/storage/9JEVBDDS/Buonviri - 2015 - Effects of music notation reinforcement on aural m.pdf},
+  annote = {Not tons of great stuff from this one.
+
+Bascially no advantage to showing them the melody.
+
+Cite to say that people have tried to use different methods in hopes of reinforcing the new informaiton desipte the constant new information that one would need.
+
+~}
+}
+
+@article{buonviriExplorationUndergraduateMusic2014,
+  title = {An {{Exploration}} of {{Undergraduate Music Majors}}' {{Melodic Dictation Strategies}}},
+  volume = {33},
+  issn = {8755-1233, 1945-0109},
+  doi = {10.1177/8755123314521036},
+  abstract = {Based on the needs for viable melodic dictation strategies and thoughtful approaches to teaching prerequisite skills, the central research question guiding this qualitative study was as follows: What strategies do dictation takers describe having used on successfully completing a standard melodic dictation? Six sophomore music majors, recommended by their theory professors as consistently successful in melodic dictation, completed two cycles each of a standard dictation coupled with a follow-up reflection interview focused on strategies. Three overarching themes emerged from data analysis: (1) Participants are highly skilled at directing their attention during dictation, (2) participants prioritize tasks carefully during each listening of a dictation, and (3) participants skillfully coordinate a variety of musical and problem-solving skills to complete dictations successfully.},
+  language = {en},
+  number = {1},
+  journal = {Update: Applications of Research in Music Education},
+  author = {Buonviri, Nathan O.},
+  month = nov,
+  year = {2014},
+  pages = {21-30},
+  file = {/Users/davidjohnbaker/Zotero/storage/CSVA64CV/Buonviri - 2014 - An Exploration of Undergraduate Music Majors’ Melo.pdf},
+  annote = {Notes from Buoviri
+
+"Researchers have found that students may use motor and\\
+visual imagery (Mikumo, 1994; Thompson, 2004), contextual\\
+solf\`ege syllable systems (McClung, 2001), and\\
+``chunking'' of bits of information into larger pieces\\
+(Madsen \& Staum, 1983; Potter, 1990) to take dictation\\
+successfully. Some students, however, may not have chosen\\
+specific strategies, and some may not even have\\
+learned multiple strategy options through coursework\\
+(Klonoski, 2006)."
+
+WHY DICTATION
+
+Melodic dictation plays a crucial role in music education\\
+because it serves as one of the ways to assess students'\\
+cognitive transfer capabilities between the visual\\
+and aural domains.
+
+~
+
+(1) Participants are highly skilled at directing their\\
+attention during dictation,
+
+(2) participants prioritize\\
+tasks carefully during each listening of a dictation, and\\
+(3) participants skillfully coordinate a variety of musical\\
+and problem-solving skills to complete dictations\\
+successfully.
+
+Participants use deductive reasoning (in line w Karpinski 2000)
+
+Telesco (1991) described the development of aural\\
+analytical skills as ``the wedding of the aural experience\\
+to abstract musical constructs'' (p. 179).
+
+These data are consistent with the framework of Margulis's\\
+(2005) model of melodic expectancy, highlighting the\\
+importance of both forward and reverse time in listeners'\\
+perceptions of, and responses to, music.
+
+Researchers might also\\
+pursue experimental comparisons of various specific strategies\\
+as measured by dictation scores, and longitudinal studies\\
+of personal strategy development by dictation students.}
+}
+
+@article{gorinComparisonSerialOrder2018,
+  title = {A Comparison of Serial Order Short-Term Memory Effects across Verbal and Musical Domains},
+  volume = {46},
+  issn = {0090-502X, 1532-5946},
+  doi = {10.3758/s13421-017-0778-0},
+  abstract = {Recent studies suggest that the mechanisms involved in the short-term retention of serial order information may be shared across short-term memory (STM) domains such as verbal and visuospatial STM. Given the intrinsic sequential organization of musical material, the study of STM for musical information may be particularly informative about serial order retention processes and their domaingenerality. The present experiment examined serial order STM for verbal and musical sequences in participants with no advanced musical expertise and experienced musicians. Serial order STM for verbal information was assessed via a serial order reconstruction task for digit sequences. In the musical domain, serial order STM was assessed using a novel melodic sequence reconstruction task maximizing the retention of tone order information. We observed that performance for the verbal and musical tasks was characterized by sequence length as well as primacy and recency effects. Serial order errors in both tasks were characterized by similar transposition gradients and ratios of fillin:infill errors. These effects were observed for both participant groups, although the transposition gradients and ratios of fill-in/infill errors showed additional specificities for musician participants in the musical task. The data support domain-general serial order STM effects but also suggest the existence of additional, domain-specific effects. Implications for models of serial order STM in verbal and musical domains are discussed.},
+  language = {en},
+  number = {3},
+  journal = {Memory \& Cognition},
+  author = {Gorin, Simon and Mengal, Pierre and Majerus, Steve},
+  month = apr,
+  year = {2018},
+  pages = {464-481},
+  file = {/Users/davidjohnbaker/Zotero/storage/VKL52Y7W/Gorin et al. - 2018 - A comparison of serial order short-term memory eff.pdf}
+}
+
+@article{buonviriEffectsTwoListening2017,
+  title = {Effects of {{Two Listening Strategies}} for {{Melodic Dictation}}},
+  volume = {65},
+  issn = {0022-4294, 1945-0095},
+  doi = {10.1177/0022429417728925},
+  abstract = {The purpose of this research was to examine effects of two listening strategies on melodic dictation scores. Fifty-four undergraduate music majors completed short tonal melodic dictations in a within-subjects design with three conditions: (a) no specified strategy in the instructions, (b) required listening before writing, and (c) required writing while listening. The purpose of the first condition was to determine subjects' preference for listening before writing or writing while listening prior to requiring each. Two repeated measures t tests revealed no significant difference in test scores between the second and third conditions and no significant difference in test scores between subjects' demonstrated preferred strategy and nonpreferred strategy. Results corroborate prior research suggesting that both may be viable strategies for melodic dictation, each offering unique benefits to aural memory and musical comprehension. Implications for high school and college aural skills instructors include the need to offer students options for dictation strategies and help them choose when and how to use them. Students who have tried multiple strategies in practice and considered their relative benefits might be better prepared to make wise decisions during dictation.},
+  language = {en},
+  number = {3},
+  journal = {Journal of Research in Music Education},
+  author = {Buonviri, Nathan O.},
+  month = oct,
+  year = {2017},
+  pages = {347-359},
+  file = {/Users/davidjohnbaker/Zotero/storage/7DMKNNUP/Buonviri - 2017 - Effects of Two Listening Strategies for Melodic Di.pdf},
+  annote = {Not much differences in writing between or after
+
+Big part of this is such high level!
+
+=== WHY DO AURAL
+
+Researchers\\
+have found that student musicians' listening skills help them to improve instrumental\\
+performance (Duke \& Simmons, 2006; Hewitt, 2001; Morrison, Trevi\~no, \& Sielert,2008), match pitch accurately (e.g., Demorest \& Clements, 2007), take dictation efficiently\\
+(Buonviri, 2014; Potter, 1990), conduct effectively (e.g., Waggoner, 2011),\\
+compose original tunes (e.g., Kennedy, 2002), and learn to improvise (e.g., Hickey,\\
+2009). Therefore, the ways students acquire and use listening skills may strongly\\
+influence their overall development as musicians.
+
+problem is that what is meant by learning to listen
+
+Waggoner (2011) discovered that undergraduate music majors were\\
+less adept at error detection when conducting a piece than when listening to a recording\\
+of it.
+
+Pembrook 1986 -- 7 - 11 Notes (Better with IC) 
+
+These results suggest that aural skills accuracy\\
+decreases as musical complexity increases, confirming findings by Byo (1997).
+
+Pembrook 1986 -- lots of factors contribute
+
+BUONVIRI 2015b -- Find this data and re-do it with musical features
+
+~}
+}
+
+@article{furbyEffectsPeerTutoring2016a,
+  title = {The {{Effects}} of {{Peer Tutoring}} on the {{Aural Skills Performance}} of {{Undergraduate Music Majors}}},
+  volume = {34},
+  issn = {8755-1233, 1945-0109},
+  doi = {10.1177/8755123314556547},
+  abstract = {As workloads of faculty and staff increase in higher education, it seems important for new learning opportunities to be devised to improve individual progress through basic musicianship courses. Many university music departments rely on in-class instruction and individual work sessions with the instructors of these courses to enhance student understanding. The purpose of this project was to determine the effect of peer tutoring on the aural skills performance of undergraduate music majors. Success within the aural skills classroom was determined through evaluation of performances of sight-singing examples and melodic and rhythmic dictation exercises. While no significant differences were found between the control and treatment groups, informal positive benefits of peer tutoring were noted.},
+  language = {en},
+  number = {3},
+  journal = {Update: Applications of Research in Music Education},
+  author = {Furby, Victoria J.},
+  month = jun,
+  year = {2016},
+  pages = {33-39},
+  file = {/Users/davidjohnbaker/Zotero/storage/N99GJPAV/Furby - 2016 - The Effects of Peer Tutoring on the Aural Skills P.pdf}
+}
+
+@article{davidbutlerWhyGulfMusic1997,
+  title = {Why the {{Gulf}} between {{Music Perception Research}} and {{Aural Training}}?},
+  language = {en},
+  number = {132},
+  journal = {Bulletin of the Council for Research in Music Education},
+  author = {David Butler},
+  year = {1997},
+  file = {/Users/davidjohnbaker/Zotero/storage/GPVERX2K/David Butler - 1997 - Why the Gulf between Music Perception Research and.pdf}
+}
+
+@article{pembrookInterferenceTranscriptionProcess24,
+  title = {Interference of the {{Transcription Process}} and {{Other Selected Variables}} on {{Perception}} and {{Memory}} during {{Melodic Dictation}}},
+  volume = {34},
+  issn = {00224294},
+  doi = {10.2307/3345259},
+  language = {en},
+  number = {4},
+  journal = {Journal of Research in Music Education},
+  author = {Pembrook, Randall G.},
+  year = {24},
+  pages = {238},
+  file = {/Users/davidjohnbaker/Zotero/storage/YIHEK2A4/Pembrook - 1986 - Interference of the Transcription Process and Othe.pdf},
+  annote = {Good listings of people who are intested in music and melody from the 20th century
+
+THIS ONE NEEDS A LONGER READ ITSELF
+
+SWEET FUCKING GRAPHS
+
+~}
+}
+
+@article{berzWorkingMemoryMusic1995,
+  title = {Working {{Memory}} in {{Music}}: {{A Theoretical Model}}},
+  volume = {12},
+  issn = {07307829, 15338312},
+  shorttitle = {Working {{Memory}} in {{Music}}},
+  doi = {10.2307/40286188},
+  language = {en},
+  number = {3},
+  journal = {Music Perception: An Interdisciplinary Journal},
+  author = {Berz, William L.},
+  month = apr,
+  year = {1995},
+  pages = {353-364},
+  file = {/Users/davidjohnbaker/Zotero/storage/S3ZKTMIA/Berz - 1995 - Working Memory in Music A Theoretical Model.pdf}
 }
 
 
